# Sudoku

./: CMakeLists.txt  ChangeLog.txt  README.md  index.html  version.txt
build.x64/: .gitignore  build-me.bat
contrib/: CONTRIB.md  sudokuk.c
examples/: AIC-rule1.txt  AIC-scan-01.txt  AIC-scan-02.txt  N3491.txt  Sudoku-01.csv  Sudoku-02.csv  Sudoku-02.xml  Sudoku-04.csv  Sudoku-05.csv  Sudoku-07.csv  Sudoku-t01.txt  Swordfish.csv  Swordfish.txt  Swordfish2.txt  brute-force.txt  color1.txt  color2.txt  color3.txt  color4.txt  coloring.txt  coloring10.txt  coloring2.txt  coloring3-1.txt  coloring3.txt  coloring4.txt  coloring5.txt  coloring6.txt  coloring7.txt  coloring8.txt  coloring9.txt  diabolical-d.txt  diabolical.txt  diabolical2.txt  diabolical3.txt  diabolical4.txt  diabolical5.txt  diabolical6.txt  dragon.txt  easiest.txt  extreme-01-2.txt  (+71 more)
src/: .gitignore  Sudo-vers.h  Sudo_AIC.cxx  Sudo_AIC.hxx  Sudo_BMP.cxx  Sudo_BMP.hxx  Sudo_Change.cxx  Sudo_Change.hxx  Sudo_Color.cxx  Sudo_Color.hxx  Sudo_Color2.cxx  Sudo_Color2.hxx  Sudo_Debug.cxx  Sudo_Debug.hxx  Sudo_Dialogs.cxx  Sudo_Dialogs.hxx  Sudo_FIle2.cxx  Sudo_File.cxx  Sudo_File.hxx  Sudo_Ini.cxx  Sudo_Ini.hxx  Sudo_Keys.cxx  Sudo_Keys.hxx  Sudo_List-old.cxx  Sudo_List-old.hxx  Sudo_List.cxx  Sudo_List.hxx  Sudo_Locked.cxx  Sudo_Locked.hxx  Sudo_Logic-ok2.cxx  Sudo_Logic.cxx  Sudo_Logic.hxx  Sudo_Menu.cxx  Sudo_Menu.hxx  Sudo_NakedPTQ.cxx  Sudo_NakedPTQ.hxx  Sudo_Paint-ok.cxx  Sudo_Paint.cxx  Sudo_Paint.hxx  Sudo_PntColors.cxx  (+54 more)
